--- a/data/index.html
+++ b/data/index.html
@@ -75,6 +75,7 @@
             background: #ffffff;
             top: 14%; left: 14%;
             width: 645px; height: 403px;
+            img { width: 100%; height: 100%; }
         }
     }
 </style>
@@ -97,8 +98,13 @@
             <button onclick="fetch('cameraRight')" id="right" class="invisible" style="clip-path: polygon(16% 51%, 55% 0, 100% 0, 100% 100%, 57% 100%); bottom: 34%; left: -6%;"></button>
             <button onclick="fetch('cameraLeft')" id="left" class="invisible" style="clip-path: polygon(74% 51%, 39% 0, 0 0, 0 100%, 44% 100%); bottom: 34%; left: -10.5%;"></button>
         </div>
+        <div class="pump-button">
+            <button onclick="fetch('pump')" class="invisible" style="clip-path: circle(50% at 50% 50%); top: 23%; left: -7%; transform: scale(1.6);"></button>
+            <button onclick="fetch('pump')" class="invisible" style="clip-path: circle(50% at 50% 50%); top: 23%; left: 94%; transform: scale(1.6);"></button>
+        </div>
         <div class="cam-container">
             <!-- CAM VIEW -->
+            
         </div>
     </div>
 </body>
