--- a/data/index.html
+++ b/data/index.html
@@ -63,16 +63,16 @@
         transform: translate(-50%, -50%);
         img { transform: scale(1.4); z-index: 0; }
         .invisible {
-            outline: solid #fff 1px;
+            /*outline: solid #fff 1px;*/
             position: absolute;
             width: 50px; height: 40px;
-            /*background: none; // DELETE !!!
-            border: none;*/
+            background: none;
+            border: none;
             
         }
         .cam-container {
             position: absolute;
-            background: #ffffff;
+            /*background: #ffffff;*/
             top: 14%; left: 14%;
             width: 645px; height: 403px;
             img { width: 100%; height: 100%; }
